# cpp-async-http-microservice

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
include/adapters/incoming/: router.h  server.h  session.h
include/adapters/outgoing/: boost_http_adapter.h
include/app/: factory.h
include/core/domain/: types.h
include/core/ports/: cache_client_interface.h  dns_cache_interface.h  dns_resolver_interface.h  env_reader_interface.h  handler_interface.h  http_client_interface.h  parser_interface.h  provider_factory_interface.h  provider_interface.h  router_interface.h  server_interface.h  session_interface.h  task.h  validator_interface.h
include/core/usecases/: shortly_handler.h
include/infra/cache/: dns_cache.h  redis_client.h
include/infra/client/: http_client.h
include/infra/environment/: env_reader.h
include/infra/exception/: exceptions.h
include/infra/factory/: provider_factory.h
include/infra/network/: dns_cache.h  dns_resolver.h
include/infra/parser/: json_parser.h
include/infra/provider/: bitly.h  provider.h  tinyurl.h
include/infra/validator/: json_validator.h  key_count_rule.h  key_rule.h
includes/: router_interface.h  server.h  server_interface.h  session.h  session_interface.h  tiny_handler.h
includes/client/: http_client.h
includes/environment_reader/: env_reader.h
includes/exception/: validation_exception.h
includes/factory/: factory.h  factory_interface.h  provider_factory.h  provider_factory_interface.h
includes/handler/: handler_interface.h  shortly_handler.h
includes/http_adapter/: boost_http_adapter.h
includes/parser/: json_parser.h  parser_interface.h
includes/provider/: bitly.h  provider.h  provider_interface.h  tinyurl.h
includes/router/: router.h  router_interface.h
includes/server/: server.h
includes/session/: session.h
includes/validator/: json_validator.h  key_count_rule.h  key_rule.h  rule_interface.h  validator_interface.h
ops/docker/: Dockerfile  dockerfile.deps  dockerfile.url_shortener
ops/k8s/base/: kustomization.yaml
ops/k8s/base/redis/: deployment.yaml  service.yaml
ops/k8s/base/url_shortener/: deployment.yaml  service.yaml
ops/k8s/dev/: kustomization.yaml  secret.env
src/: entrypoint.cpp  proof.cpp  router.cpp  session.cpp
src/adapters/incoming/: router.cpp  server.cpp  session.cpp
src/adapters/outgoing/: boost_http_adapter.cpp
src/app/: factory.cpp  main.cpp
src/client/: http_client.cpp
src/core/usecases/: shortly_handler.cpp
src/factory/: factory.cpp  provider_factory.cpp
src/handler/: shortly_handler.cpp
src/http_adapter/: boost_http_adapter.cpp
src/infra/cache/: dns_cache.cpp  redis_client.cpp
src/infra/client/: http_client.cpp
src/infra/factory/: provider_factory.cpp
src/infra/network/: dns_cache.cpp  dns_resolver.cpp
src/infra/parser/: json_parser.cpp
src/infra/provider/: bitly.cpp  provider.cpp  tinyurl.cpp
src/infra/validator/: json_validator.cpp  key_count_rule.cpp  key_rule.cpp
src/parser/: json_parser.cpp
src/provider/: bitly.cpp  provider.cpp  tinyurl.cpp
src/router/: router.cpp
src/session/: session.cpp
src/validator/: json_validator.cpp  key_count_rule.cpp  key_rule.cpp
test/: CMakeLists.txt
test/mock/: mock_env_reader.h  mock_http_client.h  mock_parser.h  mock_provider.h  mock_provider_factory.h  mock_redis_cache.h  mock_rule.h  mock_validator.h
test/src/: test_json_parser.cpp  test_json_validator.cpp  test_key_count_rule.cpp  test_key_rule.cpp
test/src/integration/: shortly_handler_integration.cpp
test/src/unit/: test_bitly.cpp  test_dns_cache.cpp  test_json_parser.cpp  test_json_validator.cpp  test_key_rule.cpp  test_shortly_handler.cpp  test_tinyurl.cpp
